log/build_2021-06-01_19-47-18/inv_kinematics_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp: In function ‘void send_vel(std::shared_ptr<interfaces::srv::PlatformVel_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::PlatformVel_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:36:19: error: ‘using element_type = class rclcpp::Publisher<interfaces::msg::MotorVels_<std::allocator<void> > >’ {aka ‘class rclcpp::Publisher<interfaces::msg::MotorVels_<std::allocator<void> > >’} has no member named ‘WaitForConnection’
   36 |      publisher_M->WaitForConnection();
      |                   ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/platform1_vel_server.dir/build.make:63: CMakeFiles/platform1_vel_server.dir/src/platform1_vel_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/platform1_vel_server.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
